--- a/public/index.html
+++ b/public/index.html
@@ -72,6 +72,10 @@
         <span class="tweetCounter">140</span>
       
       </form>
+<!-- Replace the in-browser alert message -->
+      <section class="alert">
+
+      </section>
 
     </section>
       
