--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
 
     </div>
 
-    <div>
+    <div class="mainContainer">
 
       <!-- Page-specific (main) content here -->
       <main class="container">
