--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
           <img src="/images/profile-hex.png">
         </div>
         <div>
-          <h2>Your Name</h2>
+          <h2 class="headerUserName">Bobby Uno</h2>
         </div>
       </header>
 
